# qtapp

./: .clang-format  .clang-tidy  .gitignore  BoardModel.cpp  BoardModel.h  CMakeLists.txt  HexBoardScene.cpp  HexBoardScene.h  HexCoordConverter.cpp  HexCoordConverter.h  HexItem.cpp  HexItem.h  HexPosition.cpp  HexPosition.h  Hexagon.qml  MainWindow.cpp  MainWindow.h  README.md  UnitItem.qml  android_sdk_functions.sh  configure.sh  configure_build_android.sh  configure_build_deploy_linux.yml  configure_build_ios.sh  configure_build_ios_simulator.sh  configure_build_macos.sh  configure_build_win.ps1  configure_build_winarm64.ps1  local_env.sh  main.cpp  main.qml  qt_installer_functions.sh
.github/workflows/: blank.yml  ios_release.yml  linux_release.yml  macos_release.yml  win_release.yml
